--- a/month-numbers/source/info.plist
+++ b/month-numbers/source/info.plist
@@ -9,18 +9,7 @@
 	<key>connections</key>
 	<dict>
 		<key>3FD0DA9D-7238-4BCF-B96B-518BF96BC747</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>94077C4C-3B77-4DB0-98A0-BDBA0FA629BE</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
+		<array/>
 		<key>57E7D8A0-DA41-457F-9FE1-154441AB917F</key>
 		<array>
 			<dict>
@@ -152,19 +141,6 @@ fi</string>
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>triggerid</key>
-				<string>months</string>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.trigger.external</string>
-			<key>uid</key>
-			<string>57E7D8A0-DA41-457F-9FE1-154441AB917F</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
 				<key>autopaste</key>
 				<false/>
 				<key>clipboardtext</key>
@@ -178,6 +154,19 @@ fi</string>
 			<string>3FD0DA9D-7238-4BCF-B96B-518BF96BC747</string>
 			<key>version</key>
 			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>triggerid</key>
+				<string>months</string>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.trigger.external</string>
+			<key>uid</key>
+			<string>57E7D8A0-DA41-457F-9FE1-154441AB917F</string>
+			<key>version</key>
+			<integer>1</integer>
 		</dict>
 		<dict>
 			<key>config</key>
