--- a/quick-searches/source/info.plist
+++ b/quick-searches/source/info.plist
@@ -55,18 +55,7 @@
 			</dict>
 		</array>
 		<key>361061D4-A7FF-4AFA-9405-B5E62E78806F</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>2A1F7FF8-4C04-417D-800D-B0426E7532E4</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
+		<array/>
 		<key>37ED8832-1FD5-46E1-8AE2-59AF11022A93</key>
 		<array>
 			<dict>
@@ -1487,7 +1476,7 @@ Post any issues and feature requests you have there. 💜</string>
 			<key>note</key>
 			<string>OneUpdater</string>
 			<key>xpos</key>
-			<integer>820</integer>
+			<integer>830</integer>
 			<key>ypos</key>
 			<integer>680</integer>
 		</dict>
