--- a/dash-profile-switch/source/info.plist
+++ b/dash-profile-switch/source/info.plist
@@ -35,7 +35,18 @@
 			</dict>
 		</array>
 		<key>F4FC387A-6A8C-4D96-A24D-8F246A74E01F</key>
-		<array/>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>16B12FA9-2C39-4AEC-BED4-88CC57332CA4</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 	</dict>
 	<key>createdby</key>
 	<string>Nikita Voloboev</string>
@@ -59,7 +70,7 @@
 readonly remote_info_plist="https://raw.githubusercontent.com/nikitavoloboev/small-workflows/master/dash-profile-switch/source/info.plist"
 readonly workflow_url="https://raw.githubusercontent.com/nikitavoloboev/small-workflows/master/dash-profile-switch/Dash%20profile%20switch.alfredworkflow"
 readonly download_type='direct'
-readonly frequency_check='4'
+readonly frequency_check='7'
 
 # FROM HERE ON, CODE SHOULD BE LEFT UNTOUCHED!
 function abort {
