--- a/clean-folders/source/info.plist
+++ b/clean-folders/source/info.plist
@@ -25,7 +25,7 @@
 		<array>
 			<dict>
 				<key>destinationuid</key>
-				<string>A498E0E7-C6B7-4E93-9898-83DFED65F521</string>
+				<string>D0F37795-89B0-4B61-9E16-CB75D7A0F6A4</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -38,7 +38,7 @@
 		<array>
 			<dict>
 				<key>destinationuid</key>
-				<string>A498E0E7-C6B7-4E93-9898-83DFED65F521</string>
+				<string>D0F37795-89B0-4B61-9E16-CB75D7A0F6A4</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -73,6 +73,8 @@
 				<false/>
 			</dict>
 		</array>
+		<key>D0F37795-89B0-4B61-9E16-CB75D7A0F6A4</key>
+		<array/>
 		<key>D46423F8-CE62-4912-A854-DBCC0741CF03</key>
 		<array>
 			<dict>
@@ -187,7 +189,7 @@
 readonly remote_info_plist="https://raw.githubusercontent.com/nikitavoloboev/small-workflows/master/clean-folders/source/info.plist"
 readonly workflow_url="https://raw.githubusercontent.com/nikitavoloboev/small-workflows/master/clean-folders/Clean%20folders.alfredworkflow"
 readonly download_type='direct'
-readonly frequency_check='0'
+readonly frequency_check='7'
 
 # FROM HERE ON, CODE SHOULD BE LEFT UNTOUCHED!
 function abort {
@@ -265,6 +267,14 @@ fi</string>
 			<string>A498E0E7-C6B7-4E93-9898-83DFED65F521</string>
 			<key>version</key>
 			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>type</key>
+			<string>alfred.workflow.utility.junction</string>
+			<key>uid</key>
+			<string>D0F37795-89B0-4B61-9E16-CB75D7A0F6A4</string>
+			<key>version</key>
+			<integer>1</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -395,9 +405,16 @@ Post any issues and feature requests you have there. 💜</string>
 			<key>note</key>
 			<string>OneUpdater</string>
 			<key>xpos</key>
-			<integer>580</integer>
+			<integer>660</integer>
 			<key>ypos</key>
-			<integer>150</integer>
+			<integer>190</integer>
+		</dict>
+		<key>D0F37795-89B0-4B61-9E16-CB75D7A0F6A4</key>
+		<dict>
+			<key>xpos</key>
+			<integer>550</integer>
+			<key>ypos</key>
+			<integer>220</integer>
 		</dict>
 		<key>D46423F8-CE62-4912-A854-DBCC0741CF03</key>
 		<dict>
@@ -415,7 +432,7 @@ Post any issues and feature requests you have there. 💜</string>
 		</dict>
 	</dict>
 	<key>version</key>
-	<string>2.1.0</string>
+	<string>2.1.3</string>
 	<key>webaddress</key>
 	<string>https://github.com/nikitavoloboev/small-workflows</string>
 </dict>
